welcome.lessons.welcome.array.array667.Array667.scala.error
array667:7: error: not found: value num
		if (num(n)==6 && nums(n+1)==6)
                    ^array667:11: error: not found: value num
		else if (num(n)==6 && nums(n+1)==7)
                         ^