welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = 
{
	var m: Int=0
	
	for (n <- 0 to nums.length-2)
	{
		if (num(n)==6 && nums(n+1)==6)
		{
			m=m+1
		}
		else if (num(n)==6 && nums(n+1)==7)
		{
			m=m+1
		}
	}
	return m
}
